2007-08-28  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/data/time/Week.java
	(Week(Date, TimeZone)): Deprecated,
	(Week(Date, TimeZone, Locale)): New constructor,
	* tests/org/jfree/data/time/junit/WeekTests.java
	(testConstructor): New test.

2007-08-28  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/renderer/category/StatisticalBarRenderer.java
	(drawHorizontalItem): Check for null data items,
	(drawVerticalItem): Likewise,
	* tests/org/jfree/chart/renderer/category/junit/StatisticalBarRendererTests.java
	(testDrawWithNullMeanVertical): New test method,
	(testDrawWithNullMeanHorizontal): Likewise,
	(testDrawWithNullDeviationVertical): Likewise,
	(testDrawWithNullDeviationHorizontal): Likewise.

2007-08-03  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/renderer/xy/XYSplineAndShapeRenderer.java
	(precision): Initialise in constructor,
	(XYSplineAndShapeRenderer()): Change default precision to 5,
	(XYSplineAndShapeRenderer(int)): New constructor.

2007-08-03  David Gilbert  <david.gilbert@object-refinery.com>

	Fix for bug 1766646:
	* source/org/jfree/chart/renderer/xy/XYBlockRenderer.java
	(findDomainBounds): Check for null,
	(findRangeBounds): Likewise.

2007-08-03  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/LegendItem.java
	(LegendItem): Initialise GradientPaintTransformer.

2007-08-02  David Gilbert  <david.gilbert@object-refinery.com>

	* experimental/org/jfree/experimental/chart/axis/LogAxis.java
	(LogAxis(String)): Leave tick marks visible,
	(autoAdjustRange): Apply margins to log scale, and don't allow auto-range 
	to go below minimum value,
	(refreshTicksHorizontal): Improved handling of ticks and labels,
	(refreshTicksVertical): Likewise,
	(selectAutoTickUnit): New method,
	(selectHorizontalAutoTickUnit): Likewise,
	(selectVerticalAutoTickUnit): Likewise,
	(exponentLengthToJava2D): Likewise,