@@ -1,3 +1,8 @@
+2007-09-21  David Gilbert  <david.gilbert@object-refinery.com>
+
+	* source/org/jfree/data/statistics/SimpleHistogramDataset.java: 
+	API doc updates.
+
 2007-08-28  David Gilbert  <david.gilbert@object-refinery.com>
 
 	* source/org/jfree/data/time/Week.java
